--- a/market_app/templates/market_app/shop.html
+++ b/market_app/templates/market_app/shop.html
@@ -21,7 +21,7 @@
               <li data-filter="*" class="filter-active">همه ی فروشگاه ها </li>
               <li data-filter=".filter-card">فاز1</li>
               <li data-filter=".filter-app">فاز2</li>
-              <li data-filter=".filter-web">فاز3</li> 
+              <!--<li data-filter=".filter-web">فاز3</li> -->
             </ul>
           </div>
         </div>
@@ -49,7 +49,7 @@
 
 
 
-{% for sh in shop3%}
+<!--{% for sh in shop3%}
            <div class="col-lg-4 col-md-6 portfolio-wrap filter-web">
             <div class="portfolio-item">
               <img style="width: 300px;" src="{{sh.icone.url}}" class="img-fluid" alt="">
@@ -63,7 +63,7 @@
             </div>
             <a href="{{sh.id}}"><h3>{{sh.name}}</h3></a>
           </div> 
-{%endfor%}
+{%endfor%}   -->
          
 
 
